--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,37 @@
+* {
+  /* border: solid 2px green; */
+}
+
 body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  background-color: #faf0ca;
+  margin: 0px;
+  min-height: 100vh;
+  width: 100vw;
+  display:flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: #0d3b66;
+  color: #f4d35e;
+  height: 22vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.user-info {
+  margin-left: 2vw;
+}
+
+img {
+  height: 25%;
+  width: 25%;
+}
+
+.logo {
+  display: flex;
+  width: 20vw;
+  flex-direction: column;
+  align-items: center;
 }
