--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,7 +49,7 @@ main {
 
 .request-booking-section {
   background-color: #f4d35e;
-  width: 20vw;
+  width: 15vw;
   color: #0d3b66;
  
 }
@@ -60,18 +60,26 @@ form {
   margin-left: 2vw;
   font-size: 1.25em;
   width: fit-content;
-  height: 15vh;
+  height: 23vh;
   justify-content: space-evenly;
 }
 
+button {
+  background-color: #0d3b66;
+  color: #f4d35e;
+  border-radius: 0.2rem;
+  height: 4vh;
+  cursor: pointer;
+}
+
 .bookings {
-  width: 80vw;
+  width: 85vw;
   color: #0d3b66;
 }
 
 .booking-cards {
   display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 3vh;
     margin-left: 2vw;
     margin-right: 3vw;
