--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,11 +19,14 @@ header {
 h2 {
   margin-left: 2vw;
   font-size: 1.75em;
+  margin-bottom: 1vh;
 }
 
 p {
   margin-left: 2vw;
   font-size: 1.25em;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
 }
 
 img {
@@ -74,15 +77,18 @@ button {
 
 .booking-cards {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 3vh;
   margin-left: 2vw;
   margin-right: 3vw;
-  margin-bottom: 3vh;
 }
 
 .booking-card {
   width: 15vw;
   background-color: #fdfcdc;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+}
+
+.user-message {
+  color: #6f1d1b;
 }
