Add functions to filter first by date, then by room type when user clicks Find Available Rooms Button and display cards for available rooms with button for booking

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,6 +89,11 @@ button {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
 }
 
+.book-room {
+  margin-left: 2vw;
+  margin-bottom: 2vh;
+}
+
 .user-message {
   color: #6f1d1b;
 }
